# LLM_summarizer

./: .gitignore  LICENCE  README.MD  pyproject.toml
back/: .env.example  main.py
back/alembic/: env.py
back/alembic/versions/: 7fe680a4ac51_init.py
back/src/config/: config.py
back/src/database/: db.py  models.py
back/src/repository/: chat.py
back/src/routes/: chat.py
back/src/schemas/: chat.py
back/src/services/: chat.py
front/: config.ini  start.py
front/pages/: Summary.py
front/pages/src/: summary_service.py
scrypt/: main.py
